syntax = "proto3";

package AnotherInnerStruct;

message AnotherInnerMessage {
    string name = 1;
    int32 id = 2;
    string second_name = 3;
    string third_name = 4;
    float id_float = 5;
    string fourth_name = 6;
    string fifth_name = 7;
}