syntax = "proto3";

package InnerStruct;

message InnerMessage {
    string name = 1;
    int32 id = 2;
    string second_name = 3;
}