syntax = "proto3";

package UniversalParser;

import "google/protobuf/any.proto";

message UniversalMessage {
    string name = 1;
    google.protobuf.Any msg = 2; 
}